[tool.poetry]
name = "campus-yapper"
version = "0.1.0"
description = "Message broker for the digital campus"
authors = ["JS Ng <ngjunsiang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
psycopg2-binary = "^2.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
